<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
         xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/maven-v4_0_0.xsd">
    <modelVersion>4.0.0</modelVersion>

    <parent>
        <groupId>aero.minova</groupId>
        <artifactId>maven.root</artifactId>
        <version>12.4.3</version>
        <relativePath/>
    </parent>

    <groupId>aero.minova.rcp</groupId>
    <artifactId>aero.minova.rcp.root</artifactId>
    <version>12.9.0-SNAPSHOT</version>
    <packaging>pom</packaging>

    <name>aero.minova.rcp</name>

    <properties>
        <java.version>17</java.version>
        <maven.javadoc.skip>true</maven.javadoc.skip>
        <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>

        <sonar.coverage.jacoco.xmlReportPaths>${maven.multiModuleProjectDirectory}/report-aggregate/target/site/jacoco-aggregate/jacoco.xml
        </sonar.coverage.jacoco.xmlReportPaths>

        <tycho.version>3.0.4</tycho.version>
    </properties>

    <modules>
        <module>bundles</module>
        <module>features</module>
        <module>releng</module>
        <module>libs</module>

        <module>tests</module>

        <module>report-aggregate</module>
    </modules>

    <build>
        <pluginManagement>
            <plugins>
                <plugin>
                    <groupId>org.apache.maven.plugins</groupId>
                    <artifactId>maven-source-plugin</artifactId>
                    <version>3.2.1</version>
                </plugin>
                <plugin>
                    <groupId>org.apache.maven.plugins</groupId>
                    <artifactId>maven-javadoc-plugin</artifactId>
                    <version>3.5.0</version>
                </plugin>
                <plugin>
                    <groupId>org.apache.maven.plugins</groupId>
                    <artifactId>maven-deploy-plugin</artifactId>
                    <version>3.1.1</version>
                </plugin>
            </plugins>
        </pluginManagement>

        <plugins>
            <plugin>
                <groupId>org.eclipse.tycho</groupId>
                <artifactId>tycho-maven-plugin</artifactId>
                <version>${tycho.version}</version>
                <extensions>true</extensions>
            </plugin>
            <plugin>
                <groupId>org.eclipse.tycho</groupId>
                <artifactId>tycho-versions-plugin</artifactId>
                <version>${tycho.version}</version>
            </plugin>
            <!--Enable the replacement of the SNAPSHOT version in the final product configuration -->
            <plugin>
                <groupId>org.eclipse.tycho</groupId>
                <artifactId>tycho-packaging-plugin</artifactId>
                <version>${tycho.version}</version>
                <executions>
                    <execution>
                        <phase>package</phase>
                        <id>package-feature</id>
                        <configuration>
                            <finalName>${project.artifactId}_${unqualifiedVersion}.${buildQualifier}</finalName>
                        </configuration>
                    </execution>
                </executions>
            </plugin>
            <!-- tag::target-definition[] -->
            <plugin>
                <groupId>org.eclipse.tycho</groupId>
                <artifactId>target-platform-configuration</artifactId>
                <version>${tycho.version}</version>
                <configuration>
                    <target>
                        <artifact>
                            <groupId>aero.minova.rcp</groupId>
                            <artifactId>rcp-target</artifactId>
                            <version>12.9.0</version>
                        </artifact>
                    </target>
                    <resolveWithExecutionEnvironmentConstraints>false</resolveWithExecutionEnvironmentConstraints>
                    <!-- end::target-definition[] -->
                    <environments>
                        <environment>
                            <os>linux</os>
                            <ws>gtk</ws>
                            <arch>x86_64</arch>
                        </environment>
                        <environment>
                            <os>win32</os>
                            <ws>win32</ws>
                            <arch>x86_64</arch>
                        </environment>
                        <environment>
                            <os>macosx</os>
                            <ws>cocoa</ws>
                            <arch>x86_64</arch>
                        </environment>
                    </environments>
                </configuration>
            </plugin>
            <!-- To define the plugin version in your parent POM -->
            <plugin>
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-release-plugin</artifactId>
                <version>3.0.0</version>
                <configuration>
                    <preparationGoals>org.eclipse.tycho:tycho-versions-plugin:${tycho.version}:update-eclipse-metadata
                        org.apache.maven.plugins:maven-scm-plugin:1.13.0:add
                        org.apache.maven.plugins:maven-scm-plugin:1.13.0:checkin
                    </preparationGoals>
                    <completionGoals>org.eclipse.tycho:tycho-versions-plugin:${tycho.version}:update-eclipse-metadata
                        org.apache.maven.plugins:maven-scm-plugin:1.13.0:add
                        org.apache.maven.plugins:maven-scm-plugin:1.13.0:checkin
                    </completionGoals>
                </configuration>
            </plugin>
            <plugin>
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-scm-plugin</artifactId>
                <version>2.0.0</version>
                <executions>
                    <execution>
                        <id>default-cli</id>
                        <goals>
                            <goal>add</goal>
                            <goal>checkin</goal>
                        </goals>
                        <configuration>
                            <includes>**/META-INF/MANIFEST.MF, **/feature.xml,
                                **/*.product,**/category.xml
                            </includes>
                            <excludes>**/target/**,**/.polyglot*</excludes>
                            <message>Changing the Eclipse files versions</message>
                        </configuration>
                    </execution>
                </executions>
            </plugin>
        </plugins>
    </build>


    <distributionManagement>
        <repository>
            <id>nexus</id>
            <name>Internal Releases</name>
            <url>http://nexus.minova.com:8081/nexus/content/repositories/releases/</url>
        </repository>
        <snapshotRepository>
            <id>nexus</id>
            <name>Internal Snapshots</name>
            <url>http://nexus.minova.com:8081/nexus/content/repositories/snapshots/</url>
        </snapshotRepository>
    </distributionManagement>

    <scm>
        <connection>scm:git:https://github.com/minova-afis/aero.minova.rcp.git</connection>
        <developerConnection>scm:git:https://github.com/minova-afis/aero.minova.rcp.git</developerConnection>
        <tag>HEAD</tag>
    </scm>

</project>
